Fix app page title align

--- a/src/common/components/AppPageTitle/AppPageTitle.scss
+++ b/src/common/components/AppPageTitle/AppPageTitle.scss
@@ -1,6 +1,9 @@
 .AppPageTitle {
+  align-items: center;
+  display: flex;
   font-size: 30px;
   font-weight: 500;
   line-height: 1;
   margin: 0;
+  width: 100%;
 }
